updated doc jen files

--- a/TestDockerisation/Dockerfile
+++ b/TestDockerisation/Dockerfile
@@ -1,8 +1,16 @@
 FROM openjdk:8-jre-slim
 
 
+
+# wget --no-verbose  -O /tmp/apache-maven-3.6.1.tar.gz  https://www-us.apache.org/dist/maven/maven-3/3.6.1/binaries/apache-maven-3.6.1-bin.tar.gz
+# tar -C /opt xzvf /tmp/apache-maven-3.6.1-bin.tar.gz
+# ln -s /opt/apache-maven-3.6.1/bin/mvn /usr/local/bin/mvn
+
+
 #17.04.0
 #RUN curl -fsSLO https://get.docker/builds/Linux/x86_64/docker-18.09.2-ce.tgz \
+#RUN wget --no-verbose https://get.docker/builds/Linux/x86_64/docker-18.09.2-ce.tgz
+
 #  && tar xzvf docker-18.09.2-ce.tgz \
 #  && mv docker/docker /usr/local/bin \
 #  && rm -r docker docker-18.09.2-ce.tgz
