--- a/TestDockerisation/Jenkinsfile
+++ b/TestDockerisation/Jenkinsfile
@@ -2,8 +2,11 @@ pipeline {
     agent any
     stages {    
         stage('Build Jar') {
+        dir("${WORKSPACE}/TestDockerisation/"){
             steps {
+            	sh'pwd'
                 sh 'mvn clean package -DskipTests'
+            }
             }
         }
         stage('Build Image') {
