--- a/TestRobot/webexcc/ui/portal/portal.yaml
+++ b/TestRobot/webexcc/ui/portal/portal.yaml
@@ -1,7 +1,7 @@
 PORTAL_PROPERTIES_QAUS1:
-  PORTAL_URL : https://portal.ext.qaus1.ciscoccservice.com
-  PARTNER_ADMINID : cjp.qa1@gmail.com
-  PARTNER_ADMINPASSWORD : Tr@nser@#123
+  PORTAL_URL : https://porasdfadsf.com
+  PARTNER_ADMINID : casdfadsfail.com
+  PARTNER_ADMINPASSWORD : Tasdfadsf#123
   ORG_NAME : VVA
-  ADMIN_LOGINID : vva@mailinator.com
-  ADMIN_PASSWORD : Welcome@123
+  ADMIN_LOGINID : sadfasdf@mailinator.com
+  ADMIN_PASSWORD : Weasdfadsfdsf3
